// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 1`] = `
<FolderIcon
  isCollab={false}
  isExternal={false}
  title={
    <FormattedMessage
      defaultMessage="Personal Folder"
      id="be.personalFolder"
    />
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 2`] = `
<FolderIcon
  isCollab={true}
  isExternal={false}
  title={
    <FormattedMessage
      defaultMessage="Collaborated Folder"
      id="be.collaboratedFolder"
    />
  }
/>
`;

exports[`features/content-explorer/item-list/ItemListIcon render() should render correct folder icon 3`] = `
<FolderIcon
  isCollab={true}
  isExternal={true}
  title={
    <FormattedMessage
      defaultMessage="Collaborated Folder"
      id="be.collaboratedFolder"
    />
  }
/>
`;
